--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@ Student/P5/data
 Student/P6/models
 Student/P6/*.pt
 Student/P6/*.jpg
+Student/P7/dataset
+Student/P7/results
+Student/P7/*.tar.xz
 *.cache
 __pycache__
